Think twice, code once.

--- a/styles/uikit/uikit.less
+++ b/styles/uikit/uikit.less
@@ -47,13 +47,13 @@ h1 {
   font-weight: bold;
 }
 pre {
-  border-radius: @global-font-size / 4;
+  border-radius: calc(@global-font-size / 4);
 }
 
 // Button
 
 .uk-button {
-  border-radius: @global-font-size / 4;
+  border-radius: calc(@global-font-size / 4);
   box-shadow: @global-small-box-shadow;
 }
 .uk-button:hover {
@@ -63,20 +63,20 @@ pre {
 // Card
 
 .uk-card {
-  border-radius: @global-font-size / 4;
+  border-radius: calc(@global-font-size / 4);
   box-shadow: @global-small-box-shadow;
 }
 
 // Alert
 
 .uk-alert {
-  border-radius: @global-font-size / 4;
+  border-radius: calc(@global-font-size / 4);
 }
 
 // Form
 
 .uk-input, .uk-select {
-  border-radius: @global-font-size / 4;
+  border-radius: calc(@global-font-size / 4);
 }
 
 // Navbar
@@ -102,15 +102,15 @@ pre {
 /**********/
 
 .speech-bubble-1 {
-  border-top-right-radius: @global-font-size / 4;
+  border-top-right-radius: calc(@global-font-size / 4);
   border-bottom-right-radius: @global-font-size;
-  border-bottom-left-radius: @global-font-size / 4;
+  border-bottom-left-radius: calc(@global-font-size / 4);
 
 }
 .speech-bubble-2 {
   border-bottom-left-radius: @global-font-size;
-  border-top-left-radius: @global-font-size / 4;
-  border-bottom-right-radius: @global-font-size / 4;
+  border-top-left-radius: calc(@global-font-size / 4);
+  border-bottom-right-radius: calc(@global-font-size / 4);
 }
 
 // Datepicker
