--- a/styles/uikit/uikit.css
+++ b/styles/uikit/uikit.css
@@ -11483,25 +11483,25 @@ h1 {
   font-weight: bold;
 }
 pre {
-  border-radius: 16px / 4;
+  border-radius: calc(16px / 4);
 }
 .uk-button {
-  border-radius: 16px / 4;
+  border-radius: calc(16px / 4);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
 .uk-button:hover {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .uk-card {
-  border-radius: 16px / 4;
+  border-radius: calc(16px / 4);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
 .uk-alert {
-  border-radius: 16px / 4;
+  border-radius: calc(16px / 4);
 }
 .uk-input,
 .uk-select {
-  border-radius: 16px / 4;
+  border-radius: calc(16px / 4);
 }
 .uk-navbar {
   z-index: 980;
@@ -11513,14 +11513,14 @@ pre {
 /* Custom */
 /**********/
 .speech-bubble-1 {
-  border-top-right-radius: 16px / 4;
+  border-top-right-radius: calc(16px / 4);
   border-bottom-right-radius: 16px;
-  border-bottom-left-radius: 16px / 4;
+  border-bottom-left-radius: calc(16px / 4);
 }
 .speech-bubble-2 {
   border-bottom-left-radius: 16px;
-  border-top-left-radius: 16px / 4;
-  border-bottom-right-radius: 16px / 4;
+  border-top-left-radius: calc(16px / 4);
+  border-bottom-right-radius: calc(16px / 4);
 }
 .rdrDefinedRangesWrapper,
 .rdrStaticRange,
