--- a/styles/uikit/uikit.less
+++ b/styles/uikit/uikit.less
@@ -16,9 +16,11 @@
 @global-muted-color:                            #525252; // Gray 70
 @global-link-color:                             #d02670; // Magenta 70
 @global-link-hover-color:                       #d02670; // Magenta 70
+//@global-inverse-color:                          #fff;
+// @global-background:                             #fff;
 @global-muted-background:                       #f4f4f4; // Gray 10
 @global-primary-background:                     #d02670; // Magenta 70
-@global-secondary-background:                   #2a0a18; // Magenta 100
+@global-secondary-background:                   #000; // Magenta 80
 @global-success-background:                     #0e6027; // Green 70
 @global-danger-background:                      #a2191f; // Red 70
 @global-border:                                 #e0e0e0; // Gray 20
@@ -81,7 +83,6 @@ pre {
 
 // Navbar
 
-@navbar-background:                             @global-primary-background;
 @navbar-nav-item-height:                        4rem;
 .uk-navbar {
   z-index: 980;
