--- a/styles/uikit/uikit.less
+++ b/styles/uikit/uikit.less
@@ -22,7 +22,7 @@
 @global-primary-background:                     #d02670; // Magenta 70
 @global-secondary-background:                   #000; // Magenta 80
 @global-success-background:                     #0e6027; // Green 70
-@global-danger-background:                      #a2191f; // Red 70
+@global-danger-background:                      #d02670 ; // Magenta 70
 @global-border:                                 #e0e0e0; // Gray 20
 
 @global-margin:                                 1rem;
