--- a/styles/uikit/uikit.css
+++ b/styles/uikit/uikit.css
@@ -10,13 +10,13 @@
 html {
   /* 1 */
   font-family: roboto, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
-  line-height: 1.5;
+  line-height: 1.25;
   /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 3 */
-  background: #fff;
+  background: #f4f4f4;
   color: #262626;
 }
 /*
@@ -269,7 +269,7 @@ h4,
 }
 h5,
 .uk-h5 {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.4;
 }
 h6,
@@ -736,8 +736,8 @@ a.uk-link-reset,
   position: relative;
   left: -30px;
   width: 30px;
-  height: 1.5em;
-  margin-bottom: -1.5em;
+  height: 1.25em;
+  margin-bottom: -1.25em;
   display: list-item;
   list-style-position: inside;
   text-align: right;
@@ -783,8 +783,8 @@ a.uk-link-reset,
   position: relative;
   left: -30px;
   width: 30px;
-  height: 1.5em;
-  margin-bottom: -1.5em;
+  height: 1.25em;
+  margin-bottom: -1.25em;
   background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%226%22%20height%3D%226%22%20viewBox%3D%220%200%206%206%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0D%0A%20%20%20%20%3Ccircle%20fill%3D%22%23262626%22%20cx%3D%223%22%20cy%3D%223%22%20r%3D%223%22%20%2F%3E%0D%0A%3C%2Fsvg%3E");
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -806,7 +806,7 @@ a.uk-link-reset,
   padding: 1rem 1rem;
 }
 .uk-list-striped > :nth-of-type(odd) {
-  background: #f4f4f4;
+  background: #ffffff;
 }
 .uk-list-striped > :nth-child(n+2) {
   margin-top: 0;
@@ -902,7 +902,7 @@ a.uk-link-reset,
   text-align: left;
   vertical-align: bottom;
   /* 1 */
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   color: #262626;
 }
@@ -951,7 +951,7 @@ a.uk-link-reset,
  */
 .uk-table-striped > tr:nth-of-type(odd),
 .uk-table-striped tbody tr:nth-of-type(odd) {
-  background: #f4f4f4;
+  background: #ffffff;
 }
 /*
  * Hover
@@ -970,7 +970,7 @@ a.uk-link-reset,
  ========================================================================== */
 .uk-table-small th,
 .uk-table-small td {
-  padding: 10px 12px;
+  padding: 1rem 12px;
 }
 .uk-table-large th,
 .uk-table-large td {
@@ -1007,7 +1007,7 @@ a.uk-link-reset,
   padding: 16px 12px;
 }
 .uk-table-small .uk-table-link > a {
-  padding: 10px 12px;
+  padding: 1rem 12px;
 }
 /* Responsive table
  ========================================================================== */
@@ -1157,7 +1157,7 @@ button.uk-icon:not(:disabled) {
   width: 36px;
   height: 36px;
   border-radius: 500px;
-  background: #f4f4f4;
+  background: #ffffff;
   color: #525252;
   vertical-align: middle;
   /* 1 */
@@ -1167,13 +1167,13 @@ button.uk-icon:not(:disabled) {
 }
 /* Hover */
 .uk-icon-button:hover {
-  background-color: #e7e7e7;
+  background-color: #f2f2f2;
   color: #262626;
 }
 /* OnClick + Active */
 .uk-icon-button:active,
 .uk-active > .uk-icon-button {
-  background-color: #dbdbdb;
+  background-color: #e6e6e6;
   color: #262626;
 }
 /* ========================================================================
@@ -1227,19 +1227,19 @@ button.uk-icon:not(:disabled) {
 /* Webkit */
 .uk-range::-webkit-slider-runnable-track {
   height: 3px;
-  background: #e7e7e7;
+  background: #f2f2f2;
 }
 .uk-range:focus::-webkit-slider-runnable-track,
 .uk-range:active::-webkit-slider-runnable-track {
-  background: #dbdbdb;
+  background: #e5e5e5;
 }
 /* Firefox */
 .uk-range::-moz-range-track {
   height: 3px;
-  background: #e7e7e7;
+  background: #f2f2f2;
 }
 .uk-range:focus::-moz-range-track {
-  background: #dbdbdb;
+  background: #e5e5e5;
 }
 /*
  * Thumb
@@ -1389,7 +1389,7 @@ button.uk-icon:not(:disabled) {
   border: 0 none;
   /* 4 */
   padding: 0 10px;
-  background: #f4f4f4;
+  background: #ffffff;
   color: #262626;
 }
 /*
@@ -1429,14 +1429,14 @@ button.uk-icon:not(:disabled) {
 .uk-select:focus,
 .uk-textarea:focus {
   outline: none;
-  background-color: #e7e7e7;
+  background-color: #f2f2f2;
   color: #262626;
 }
 /* Disabled */
 .uk-input:disabled,
 .uk-select:disabled,
 .uk-textarea:disabled {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   color: #525252;
 }
 /*
@@ -1605,7 +1605,7 @@ select.uk-form-width-xsmall {
   -webkit-appearance: none;
   -moz-appearance: none;
   /* 5 */
-  background-color: #e7e7e7;
+  background-color: #f2f2f2;
   /* 6 */
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -1616,7 +1616,7 @@ select.uk-form-width-xsmall {
 /* Focus */
 .uk-radio:focus,
 .uk-checkbox:focus {
-  background-color: #dbdbdb;
+  background-color: #e5e5e5;
   outline: none;
 }
 /*
@@ -1650,7 +1650,7 @@ select.uk-form-width-xsmall {
  */
 .uk-radio:disabled,
 .uk-checkbox:disabled {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
 }
 .uk-radio:disabled:checked {
   background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0D%0A%20%20%20%20%3Ccircle%20fill%3D%22%23525252%22%20cx%3D%228%22%20cy%3D%228%22%20r%3D%222%22%20%2F%3E%0D%0A%3C%2Fsvg%3E");
@@ -1853,7 +1853,7 @@ select.uk-form-width-xsmall {
   box-sizing: border-box;
   padding: 0 1rem;
   vertical-align: middle;
-  font-size: 16px;
+  font-size: 14px;
   /* 8 */
   line-height: 40px;
   /* 9 */
@@ -1883,18 +1883,18 @@ select.uk-form-width-xsmall {
  * Default
  */
 .uk-button-default {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   color: #161616;
 }
 /* Hover */
 .uk-button-default:hover {
-  background-color: #e7e7e7;
+  background-color: #f2f2f2;
   color: #161616;
 }
 /* OnClick + Active */
 .uk-button-default:active,
 .uk-button-default.uk-active {
-  background-color: #dbdbdb;
+  background-color: #e6e6e6;
   color: #161616;
 }
 /*
@@ -1959,7 +1959,7 @@ select.uk-form-width-xsmall {
 .uk-button-primary:disabled,
 .uk-button-secondary:disabled,
 .uk-button-danger:disabled {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   color: #525252;
 }
 /* Size modifiers
@@ -1984,7 +1984,7 @@ select.uk-form-width-xsmall {
 .uk-button-text {
   /* 1 */
   padding: 0;
-  line-height: 1.5;
+  line-height: 1.25;
   background: none;
   /* 2 */
   color: #161616;
@@ -2005,7 +2005,7 @@ select.uk-form-width-xsmall {
 .uk-button-link {
   /* 1 */
   padding: 0;
-  line-height: 1.5;
+  line-height: 1.25;
   background: none;
   /* 2 */
   color: #161616;
@@ -2054,7 +2054,7 @@ select.uk-form-width-xsmall {
   /* 3 */
   border: 0;
   /* 4 */
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   /* 5 */
   margin-bottom: 1rem;
   height: 15px;
@@ -2159,13 +2159,13 @@ select.uk-form-width-xsmall {
  * Default
  */
 .uk-section-default {
-  background: #fff;
+  background: #f4f4f4;
 }
 /*
  * Muted
  */
 .uk-section-muted {
-  background: #f4f4f4;
+  background: #ffffff;
 }
 /*
  * Primary
@@ -2417,13 +2417,13 @@ select.uk-form-width-xsmall {
  * Default
  */
 .uk-tile-default {
-  background-color: #fff;
+  background-color: #f4f4f4;
 }
 /*
  * Muted
  */
 .uk-tile-muted {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
 }
 /*
  * Primary
@@ -2526,7 +2526,7 @@ select.uk-form-width-xsmall {
 /* Hover modifier
  ========================================================================== */
 .uk-card-hover:not(.uk-card-default):not(.uk-card-primary):not(.uk-card-secondary):hover {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
 }
 /* Style modifiers
  ========================================================================== */
@@ -2535,14 +2535,14 @@ select.uk-form-width-xsmall {
  * Note: Header and Footer are only implemented for the default style
  */
 .uk-card-default {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   color: #262626;
 }
 .uk-card-default .uk-card-title {
   color: #161616;
 }
 .uk-card-default.uk-card-hover:hover {
-  background-color: #e7e7e7;
+  background-color: #f2f2f2;
 }
 /*
  * Primary
@@ -2697,7 +2697,7 @@ select.uk-form-width-xsmall {
   position: relative;
   margin-bottom: 1rem;
   padding: 15px 29px 15px 15px;
-  background: #f4f4f4;
+  background: #ffffff;
   color: #262626;
 }
 /* Add margin if adjacent element */
@@ -2763,7 +2763,7 @@ select.uk-form-width-xsmall {
 .uk-placeholder {
   margin-bottom: 1rem;
   padding: 1rem 1rem;
-  background: #f4f4f4;
+  background: #ffffff;
 }
 /* Add margin if adjacent element */
 * + .uk-placeholder {
@@ -2812,7 +2812,7 @@ select.uk-form-width-xsmall {
   display: inline-block;
   padding: 0 1rem;
   background: #d02670;
-  line-height: 1.5;
+  line-height: 1.25;
   font-size: 0.875rem;
   color: #fff;
   vertical-align: middle;
@@ -2861,7 +2861,7 @@ select.uk-form-width-xsmall {
  * Default
  */
 .uk-overlay-default {
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(244, 244, 244, 0.8);
 }
 /*
  * Primary
@@ -3097,11 +3097,11 @@ select.uk-form-width-xsmall {
   height: 40px;
   padding-left: 10px;
   padding-right: 10px;
-  background: #f4f4f4;
+  background: #ffffff;
 }
 /* Focus */
 .uk-search-default .uk-search-input:focus {
-  background-color: #e7e7e7;
+  background-color: #f2f2f2;
 }
 /*
  * Icon
@@ -3264,7 +3264,7 @@ select.uk-form-width-xsmall {
   max-width: 100vw;
   /* 4 */
   padding: 15px;
-  background: #f4f4f4;
+  background: #ffffff;
   color: #262626;
 }
 /* Show */
@@ -3393,7 +3393,7 @@ select.uk-form-width-xsmall {
   /* 3 */
   max-width: 100% !important;
   /* 4 */
-  background: #fff;
+  background: #f4f4f4;
   /* 5 */
   opacity: 0;
   transform: translateY(-100px);
@@ -3442,12 +3442,12 @@ select.uk-form-width-xsmall {
 .uk-modal-header {
   display: flow-root;
   padding: 0.5rem 1rem;
-  background: #f4f4f4;
+  background: #ffffff;
 }
 .uk-modal-footer {
   display: flow-root;
   padding: 0.5rem 1rem;
-  background: #f4f4f4;
+  background: #ffffff;
 }
 /*
  * Remove margin from the last-child
@@ -4009,7 +4009,7 @@ select.uk-form-width-xsmall {
 .uk-notification-message {
   position: relative;
   padding: 1rem;
-  background: #f4f4f4;
+  background: #ffffff;
   color: #262626;
   font-size: 1rem;
   line-height: 1.4;
@@ -4604,8 +4604,8 @@ ul.uk-nav-sub {
  ========================================================================== */
 .uk-nav-parent-icon > .uk-parent > a::after {
   content: "";
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.25em;
+  height: 1.25em;
   margin-left: auto;
   background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2214%22%20height%3D%2214%22%20viewBox%3D%220%200%2014%2014%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0D%0A%20%20%20%20%3Cpolyline%20fill%3D%22none%22%20stroke%3D%22%23262626%22%20stroke-width%3D%221.1%22%20points%3D%2210%201%204%207%2010%2013%22%20%2F%3E%0D%0A%3C%2Fsvg%3E");
   background-repeat: no-repeat;
@@ -4676,7 +4676,7 @@ ul.uk-nav-sub {
  */
 .uk-nav-primary > li > a {
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1.25;
   color: #525252;
 }
 /* Hover */
@@ -4755,7 +4755,7 @@ ul.uk-nav-sub {
 /* Container
  ========================================================================== */
 .uk-navbar-container:not(.uk-navbar-transparent) {
-  background: #f4f4f4;
+  background: #ffffff;
 }
 /* Groups
  ========================================================================== */
@@ -4859,7 +4859,7 @@ ul.uk-nav-sub {
   min-height: 4rem;
   padding: 0 15px;
   /* 4 */
-  font-size: 16px;
+  font-size: 14px;
   font-family: roboto, sans-serif;
   /* 5 */
   text-decoration: none;
@@ -4941,7 +4941,7 @@ ul.uk-nav-sub {
   max-width: 100vw;
   /* 4 */
   padding: 15px;
-  background: #f4f4f4;
+  background: #ffffff;
   color: #262626;
 }
 /* Show */
@@ -5043,7 +5043,7 @@ ul.uk-nav-sub {
   z-index: 980;
   left: 0;
   right: 0;
-  background: #f4f4f4;
+  background: #ffffff;
 }
 /* ========================================================================
    Component: Subnav
@@ -5145,12 +5145,12 @@ ul.uk-nav-sub {
 }
 /* Hover */
 .uk-subnav-pill > * > a:hover {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   color: #262626;
 }
 /* OnClick */
 .uk-subnav-pill > * > a:active {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   color: #262626;
 }
 /* Active */
@@ -6646,8 +6646,8 @@ ul.uk-nav-sub {
   line-height: 1.5;
 }
 .uk-text-default {
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 14px;
+  line-height: 1.25;
 }
 /* Weight modifier
  ========================================================================== */
@@ -7019,10 +7019,10 @@ iframe[data-uk-cover] {
 /* Color
  ========================================================================== */
 .uk-background-default {
-  background-color: #fff;
+  background-color: #f4f4f4;
 }
 .uk-background-muted {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
 }
 .uk-background-primary {
   background-color: #d02670;
@@ -7532,16 +7532,16 @@ iframe[data-uk-cover] {
 /* Box-shadow
  ========================================================================== */
 .uk-box-shadow-small {
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 .uk-box-shadow-medium {
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
 }
 .uk-box-shadow-large {
-  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 14px 25px rgba(0, 0, 0, 0.16);
 }
 .uk-box-shadow-xlarge {
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 28px 50px rgba(0, 0, 0, 0.16);
 }
 /*
  * Hover
@@ -7550,16 +7550,16 @@ iframe[data-uk-cover] {
   transition: box-shadow 0.1s ease-in-out;
 }
 .uk-box-shadow-hover-small:hover {
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 .uk-box-shadow-hover-medium:hover {
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
 }
 .uk-box-shadow-hover-large:hover {
-  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 14px 25px rgba(0, 0, 0, 0.16);
 }
 .uk-box-shadow-hover-xlarge:hover {
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 28px 50px rgba(0, 0, 0, 0.16);
 }
 /* Box-shadow bottom
  ========================================================================== */
@@ -7606,7 +7606,7 @@ iframe[data-uk-cover] {
   display: block;
   margin-right: 10px;
   float: left;
-  font-size: 4.5em;
+  font-size: 3.75em;
   line-height: 1;
 }
 /* 2 */
@@ -10282,7 +10282,7 @@ iframe[data-uk-cover] {
 .uk-card-secondary > :not([class*='uk-card-media']) .uk-marker,
 .uk-overlay-primary .uk-marker,
 .uk-offcanvas-bar .uk-marker {
-  background: #f4f4f4;
+  background: #ffffff;
   color: #262626;
 }
 .uk-light .uk-marker:hover,
@@ -11483,48 +11483,45 @@ h1 {
   font-weight: bold;
 }
 pre {
-  border-radius: calc(16px / 4);
+  border-radius: calc(14px / 2);
+}
+canvas {
+  max-height: 250px;
 }
 .uk-button {
-  border-radius: calc(16px / 4);
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
-}
-.uk-button:hover {
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  border-radius: calc(14px / 2);
 }
 .uk-card {
-  border-radius: calc(16px / 4);
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  border: solid 1px #e0e0e0;
+  border-radius: calc(14px / 2);
 }
 .uk-alert {
-  border-radius: calc(16px / 4);
+  border-radius: calc(14px / 2);
 }
 .uk-input,
 .uk-select {
-  border-radius: calc(16px / 4);
+  border-radius: calc(14px / 2);
 }
 .uk-navbar {
   z-index: 980;
-}
-.uk-dropdown {
-  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+  border-bottom: solid 1px #e0e0e0;
 }
 /**********/
 /* Custom */
 /**********/
 .speech-bubble-1 {
-  border-top-right-radius: calc(16px / 4);
-  border-bottom-right-radius: 16px;
-  border-bottom-left-radius: calc(16px / 4);
+  border-top-right-radius: calc(14px / 4);
+  border-bottom-right-radius: 14px;
+  border-bottom-left-radius: calc(14px / 4);
 }
 .speech-bubble-2 {
-  border-bottom-left-radius: 16px;
-  border-top-left-radius: calc(16px / 4);
-  border-bottom-right-radius: calc(16px / 4);
+  border-bottom-left-radius: 14px;
+  border-top-left-radius: calc(14px / 4);
+  border-bottom-right-radius: calc(14px / 4);
 }
 .rdrDefinedRangesWrapper,
 .rdrStaticRange,
 .rdrCalendarWrapper {
-  background-color: #f4f4f4 !important;
+  background-color: #ffffff !important;
 }
 /*# sourceMappingURL=uikit.css.map */
