Think twice, code once.

--- a/styles/uikit/uikit.less
+++ b/styles/uikit/uikit.less
@@ -45,7 +45,7 @@ pre {
   border-radius: calc(@global-font-size / 2);
 }
 canvas {
-  max-height: 250px;
+  max-height: @height-large-height;
 }
 
 // Button
