--- a/styles/uikit/uikit.less
+++ b/styles/uikit/uikit.less
@@ -87,21 +87,15 @@ canvas {
 @table-row-active-background:                   #e5f6ff; // Cyan 10
 @table-small-cell-padding-vertical:             1rem;
 
+// Dropdown
+
+.uk-dropdown {
+  border-radius: calc(@global-font-size / 2);
+}
+
 /**********/
 /* Custom */
 /**********/
-
-.speech-bubble-1 {
-  border-top-right-radius: calc(@global-font-size / 4);
-  border-bottom-right-radius: @global-font-size;
-  border-bottom-left-radius: calc(@global-font-size / 4);
-
-}
-.speech-bubble-2 {
-  border-bottom-left-radius: @global-font-size;
-  border-top-left-radius: calc(@global-font-size / 4);
-  border-bottom-right-radius: calc(@global-font-size / 4);
-}
 
 // Datepicker
 
